--- a/Project/Styles/account.css
+++ b/Project/Styles/account.css
@@ -1,4 +1,4 @@
-@import url("./main.css");
+
 
 
 .flex {
@@ -18,4 +18,23 @@
 .profile__title {
     min-width: 200px;
     padding: 20px;
+}
+
+.list__list1 {
+    padding-left: 10%;
+}
+
+ul {
+    list-style-type: none;
+  }
+
+.list__list2 {
+    padding-left: 10%;
+}
+
+.font1 {
+    font-family: var(--font1);
+}
+.font2 {
+    font-family: var(--font2);
 }
