--- a/Project/Styles/main.css
+++ b/Project/Styles/main.css
@@ -1,7 +1,8 @@
+
 :root {
     --primary: #FFF;
     --primary1: #363738;
-    --secondary: #F5F5F5;
+    --secondary: #e9e8e8;
     --secondary1: #FEFAF1;
     --secondary2: #DB4444;
     --background: #FFFFFF;
