--- a/Project/Styles/account.css
+++ b/Project/Styles/account.css
@@ -17,19 +17,26 @@
 
 .profile__title {
     min-width: 200px;
-    padding: 20px;
+    padding: 10px;
+    color: red ;
 }
 
 .list__list1 {
     padding-left: 10%;
+    padding: 10%;
+}
+
+.list__list2 {
+    padding-left: 10%;
+    padding: 10%;
 }
 
 ul {
     list-style-type: none;
   }
 
-.list__list2 {
-    padding-left: 10%;
+li{
+    padding-bottom: 10%;
 }
 
 .font1 {
@@ -37,4 +44,89 @@ ul {
 }
 .font2 {
     font-family: var(--font2);
+}
+.profile {
+    min-width: 71%;   
+    max-width: 71%;
+    margin: 0;
+    padding: 0;
+
+}
+.profile__infos--name{
+    min-height: 11%;
+    max-height: 11%;
+}
+
+
+.profile__infos--left {
+    min-width: 45%;
+    max-width: 45%;
+    padding: 0 !important;
+    margin-left: 10px;
+}
+
+.profile__infos--right {
+    min-width: 45%;
+    max-width: 45%;
+    padding: 0 !important;
+}
+
+
+input {
+    min-width: 100%;
+    max-width: 100%; 
+    min-height: 40px;
+    max-height: 40px;
+    border: transparent;
+    background-color: rgb(248, 244, 244);
+}
+
+.pad {
+    padding: 1%;
+}
+
+.mar {
+    margin: 1%;
+}
+
+.profile__buttons{
+    display: flex;
+    justify-content: end;
+}
+
+.profile__button1 {
+    padding: 0.5rem 1.5rem; 
+    background-color: transparent;
+    border: 1px solid #D1D5DB; 
+    border-radius: 0.65rem; 
+
+  }
+
+
+  .profile__button2 {
+
+    padding-left: 10px !important;
+    padding: 0.5rem 1.5rem; 
+    color: #ffffff; 
+    background-color: #EF4444; 
+    border-radius: 0.65rem; 
+    border: 1px solid #D1D5DB; 
+    min-width: 150px;
+    max-width: 150px;
+    min-height: 50px;
+    max-height: 50px;
+  }
+
+  .fill {
+    min-width: 2% !important;
+    max-width: 2% !important;
+  }
+
+.profile__button1:hover {
+    background-color: #f5f5f5;
+    border-color: #999;
+}
+
+.profile__button2:hover {
+    background-color: #c13333;
 }
