--- a/Project/Styles/about.css
+++ b/Project/Styles/about.css
@@ -81,10 +81,14 @@
     margin: 0 10px;
 }
 
+/* About */
+
+
+
 
 /* Footer */
 .footer {
-    margin-top: 21rem;
+    margin-top: 16rem;
     padding-top: 32px;
     font-family: var(--font1);
     background-color: var(--primary1);
@@ -93,17 +97,17 @@
 
 .footer__lists {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .footer__title {
     font-size: 2.4rem;
-    margin: 16px 0;
+    margin-top: 16px;
 }
 
-.subscribe__title {
+.footer__subtitle {
     font-size: 2rem;
-    margin-bottom: 16px;
+    margin: 16px 0;
     font-weight: 400;
 }
 
@@ -140,6 +144,64 @@
     color: var(--primary)
 }
 
+
+.support__lists,
+.account__lists,
+.quicklinks__lists {
+    max-width: 16rem;
+    word-break: break-all;
+    list-style: none;
+    padding: 0;
+    font-size: 1.4rem;
+}
+
+.lists__items {
+    font-weight: 300;
+}
+
+.lists__items + .lists__items {
+    margin-top: 16px;
+}
+
+.lists__items-links {
+    color: var(--text1);
+    text-decoration: none;
+}
+
+.footer__download {
+    display: flex;
+    flex-direction: column;
+}
+
+.download__desc {
+    font-size: 1.2rem;
+    margin-bottom: 8px;
+    color: var(--text1);
+}
+
+.download__links {
+    display: flex;
+    justify-content: space-between;
+}
+
+.links {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-left: 8px;
+}
+
+.download__social-links {
+    display: flex;
+}
+
+.social-links__icon {
+    text-decoration: none;
+    color: var(--primary);
+    margin: 24px 12px 24px 12px;
+}
+
+
 .footer__copyright {
     text-align: center;
     margin-top: 32px;
@@ -148,6 +210,7 @@
 }
 
 .copyright__title {
+    font-size: 1.6rem;
     color: var(--text1);
     font-weight: 400;
 }
