--- a/Project/Styles/main.css
+++ b/Project/Styles/main.css
@@ -4,7 +4,7 @@
 :root {
     --primary: #FFF;
     --primary1: #000;
-    --secondary: #e9e8e8;
+    --secondary: #c1c1c1;
     --secondary1: #FEFAF1;
     --secondary2: #DB4444;
     --background: #FFFFFF;
