--- a/Project/Styles/Sign-in.css
+++ b/Project/Styles/Sign-in.css
@@ -1,73 +1,111 @@
 @import url("./main.css");
-.container{
-    padding: 20px;
-}
 .wrapper{
     align-items: center;
     display: flex;
-    justify-content: space-around;
-    font-family: var(--font2);
+    justify-items: center;
+    padding-top: 50px;
 }
 .wrapper__content{
-    margin-left: 100px;
-    margin-right: 100px;
+    padding-left: 125px;
 }
-.wrapper__logo img{
+.wrapper__advertise img{
     width: 700px;
-    max-width: 100%;
 }
 .wrapper__content__title {
-    font-size: 1.5rem;
+    font-size: 1.7rem;
 }
 h1{
-    font-weight: 450;
-    letter-spacing: 2.2px;
+    font-weight: 500;
+    letter-spacing: 2px;
     padding-bottom: 20px;
+    font-family: var(--font2);
 }
 h4{
     font-weight: 400;
-    padding-bottom: 20px;
+    padding-bottom: 15px;
     font-size: 14px;
+    font-family: var(--font1);
 }
 .wrapper__input__data input{
     border: none;
     border-bottom: 1px solid gray;
-    margin-bottom: 20px;
-    margin-top: 20px;
-    padding-bottom: 10px;
-    padding-top: 10px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    padding-bottom: 5px;
+    padding-top: 20px;
     outline: none;
+    font-family: var(--font1);
+    width: 356px;
 }
 .wrapper__input__data{
     display: flex;
     flex-direction: column;
 }
 ::placeholder{
-    color: silver;
-    font-weight: 100;
+    color: #999999;
+    font-weight: 350;
+    font-size: 14px;
 }
-button{
+.submit__btn button {
     background-color: #db4445;
     border: none;
     color: white;
-    padding: 17px 44px;
+    padding: 15px 123px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 13px;
-    border-radius: 5px;
-    margin-top: 10px;
+    font-size: 14px;
+    border-radius: 4px;
+    margin-top: 25px;
     cursor: pointer;
     transition-duration: 0.4s;
+    font-family: var(--font1);
 }
-button:hover{
+.submit__btn button:hover{
     background-color: #bc3b3b;
 }
-a {
+
+.google__btn button {
+    background-color: #ffffff;
+    border: 0.1px solid black;
+    color: rgb(0, 0, 0);
+    padding: 13px 90px;
+    text-align: center;
     text-decoration: none;
-    color: #db4445;
-    font-size: 13px;
-    padding-left: 15px;
-    padding-right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 14px;
+    border-radius: 4px;
+    margin-top: 15px;
+    cursor: pointer;
+    transition-duration: 0.4s;
+    font-family: var(--font1);
+    font-weight: 400;
 }
 
+.google__btn img {
+    width: 25px;
+    margin-right: 10px;
+}
+.google__btn button:hover{
+    background-color: #ececec;
+}
+
+.Login {
+    width: 310px;
+    font-family: var(--font1);
+    font-size: 14px;
+    align-items: center;
+    display: flex;
+    font-weight: 300;
+    margin-left: 65px;
+    padding-top: 30px;
+}
+.Login a {
+    color: black;
+    text-decoration: none;
+    border-bottom: 1px solid black;
+    font-weight: 400;
+    margin-left: 15px;
+}
