--- a/Project/Styles/Log-In.css
+++ b/Project/Styles/Log-In.css
@@ -50,13 +50,12 @@ h4{
     background-color: #db4445;
     border: none;
     color: white;
-    padding: 15px 123px;
+    padding: 15px 50px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 14px;
+    font-size: 15px;
     border-radius: 4px;
-    margin-top: 25px;
     cursor: pointer;
     transition-duration: 0.4s;
     font-family: var(--font1);
@@ -64,48 +63,19 @@ h4{
 .submit__btn button:hover{
     background-color: #bc3b3b;
 }
-
-.google__btn button {
-    background-color: #ffffff;
-    border: 0.1px solid black;
-    color: rgb(0, 0, 0);
-    padding: 13px 90px;
-    text-align: center;
+.forget-password__btn a{
+    display: flex;
     text-decoration: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 14px;
-    border-radius: 4px;
-    margin-top: 15px;
-    cursor: pointer;
-    transition-duration: 0.4s;
+    color: #db4445;
+    font-size: 15px;
     font-family: var(--font1);
-    font-weight: 400;
-}
-
-.google__btn img {
-    width: 25px;
-    margin-right: 10px;
-}
-.google__btn button:hover{
-    background-color: #ececec;
-}
-
-.Login {
-    width: 310px;
-    font-family: var(--font1);
-    font-size: 14px;
-    align-items: center;
-    display: flex;
     font-weight: 300;
-    margin-left: 65px;
-    padding-top: 30px;
 }
-.Login a {
-    color: black;
-    text-decoration: none;
-    border-bottom: 1px solid black;
-    font-weight: 400;
-    margin-left: 15px;
+.wrapper__btn {
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    width: 356px;
+    justify-content: space-between;
+    margin-top: 25px;
 }
