--- a/Project/Styles/pd-detail.css
+++ b/Project/Styles/pd-detail.css
@@ -1,5 +1,9 @@
 @import url('./main.css');
 
+:root {
+    --wishlistPos: calc(3%);
+}
+
 * {
     font-family: var(--font1);
 }
@@ -319,4 +323,161 @@
 .highlight__para a {
     color: var(--primary1);
     font-weight: 500;
+}
+
+
+/* Items Suggest */
+.suggest__lists {
+    width: 100%;
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.suggest__items-info {
+    position: relative;
+}
+
+.suggest__wrapper {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+}
+
+.suggest__wrapper + .suggest__wrapper {
+    margin-left: 32px;
+}
+
+
+.items__feature {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    color: var(--primary);
+    background-color: black;
+    border: none;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    padding: 8px;
+    cursor: pointer;
+}
+
+.feature__title {
+    font-size: 1.4rem;
+    font-weight: 400;
+}
+
+
+.items__img {
+    background-color: var(--secondary);
+    padding-top: 200px;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+}
+
+.img1 {
+    background-image: url(/Project/assets/pd-details/gamepad.png);
+}
+.img2 {
+    background-image: url(/Project/assets/pd-details/keyboard.png);
+}
+.img3 {
+    background-image: url(/Project/assets/pd-details/monitor.png);
+}
+.img4 {
+    background-image: url(/Project/assets/pd-details/cooler.png);
+}
+
+.items__wishlist,
+.items__view {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--primary);
+    border: 0;
+    height: 3.2rem;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.items__wishlist-img,
+.items__view-img {
+    display: flex;
+    align-items: center;
+    scale: 0.9;
+    padding: 4px;
+}
+
+.items__wishlist {
+    top: var(--wishlistPos);
+    right: calc(3% - 2px);
+}
+
+.items__view {
+    top: calc(var(--wishlistPos) + 12%);
+    right: calc(3% - 2px);;
+}
+
+.items__title {
+    margin: 8px 0;
+    font-size: 1.4rem;
+    font-weight: 500;
+}
+
+.items__price-info {
+    color: var(--secondary2);
+    font-size: 1.4rem;
+    font-weight: 600;
+}
+
+/* Suggest Section */
+.items__suggest {
+    margin-top: 60px;
+}
+
+.suggest__feature__wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 34px;
+}
+
+.suggest__feature {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 28px;
+}
+
+.suggest__title--block {
+    background-color: var(--secondary2);
+    width: 15px;
+    height: 30px;
+    border-radius: 2px;
+    margin-right: 16px;
+}
+
+.suggest__title {
+    color: var(--secondary2);
+}
+
+.items__rating-info {
+    display: flex;
+    align-items: center;
+}
+
+.items__ratings {
+    font-size: 1.8rem;
+    color: darkorange;
+    margin-right: 8px;
+}
+
+.ratings__quantity {
+    font-size: 1.2rem;
+    color: var(--text1);
 }
