--- a/Project/Styles/cart.css
+++ b/Project/Styles/cart.css
@@ -15,3 +15,168 @@
     font-weight: 500;
 }
 
+.cart__info-wrapper {
+    display: grid;
+    justify-content: space-around;
+    align-items: center;
+    grid-template: repeat(3, 1fr) / repeat(4, 1fr);
+    gap: 16px;
+    margin-bottom: 16px;
+}
+
+.cart__info,
+.cart__products {
+    list-style: none;
+}
+
+.cart__info,
+.cart__products {
+    display: grid;
+    justify-content: space-between;
+    align-items: center;
+    grid-template-columns: repeat(4, 80px);
+    grid-column: 1 / span 4;
+    padding: 24px 24px;
+    border: 1px solid var(--secondary);
+    box-shadow: 0 2px 10px 1px var(--secondary);
+}
+
+
+.info__item,
+.products__wrapper {
+    width: fit-content;
+}
+
+.products__desc {
+    width: 120px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: nowrap;
+}
+
+.products__img {
+    height: 30px;
+}
+
+.info__title,
+.products__title {
+    font-size: 1.2rem;
+    font-weight: 400;
+}
+
+.products__quantity {
+    position: relative;
+    padding: 8px 8px 8px 0;
+    border: 1px solid var(--text1);
+    border-radius: 4px;
+    text-align: center;
+    max-width: 50px;
+}
+
+.products__quantity::-webkit-inner-spin-button,
+.products__quantity::-webkit-outer-spin-button {
+    opacity: 1;
+    -webkit-appearance: inner-spin-button !important;
+    width: 25px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100%;
+}
+
+/* Features */
+.cart__features {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.feature__button {
+    background-color: transparent;
+    border: 1px solid var(--text1);
+    border-radius: 4px;
+    height: 40px;
+    padding: 8px 32px;
+    margin-bottom: 60px;
+    font-weight: 500;
+}
+
+/* Checkout */
+.cart__checkout {
+    display: flex;
+    justify-content: space-between;
+}
+
+.checkout__coupon {
+    flex-basis: 50%;
+}
+
+.checkout__total {
+    flex-basis: 35%;
+}
+
+.checkout__total {
+    display: flex;
+    flex-direction: column;
+}
+
+.checkout__title {
+    font-weight: 500;
+    margin-bottom: 16px;
+}
+
+.coupon__input {
+    flex: 1;
+    height: 40px;
+    padding: 0 40px 0 16px;
+    margin-right: 8px;
+    border: 1px solid var(--text1);
+    border-radius: 4px;
+}
+
+.coupon__submit {
+    height: 40px;
+    padding: 0 40px;
+    background-color: var(--secondary2);
+    color: var(--primary);
+    border: none;
+    border-radius: 4px;
+}
+
+.checkout__total {
+    border: 1px solid var(--primary1);
+    padding: 16px;
+}
+
+.checkout__price-wrapper {
+    display: flex;
+    justify-content: space-between;
+}
+
+.price__title,
+.price {
+    font-size: 1.2rem;
+    font-weight: 400;
+}
+
+.separators {
+    margin: 8px 0;
+}
+
+.checkout__button {
+    height: 40px;
+    padding: 0 24px;
+    margin-top: 16px;
+    background-color: var(--secondary2);
+    color: var(--primary);
+    border: none;
+    border-radius: 4px;
+    align-self: center;
+}
+
+.feature__button,
+.coupon__submit,
+.checkout__button {
+    cursor: pointer;
+}
