--- a/Project/Styles/homepage.css
+++ b/Project/Styles/homepage.css
@@ -101,3 +101,40 @@ p{
 .carousel-button.prev{
     left:10px;
 }
+
+.carousel_stylle_button {
+    background:none;
+    border: none;
+    font-size: 2rem;
+    border-radius: 100px;
+    cursor: pointer;
+    padding-left:16px ;
+    padding-right:16px;
+    padding-bottom: 1px;
+}
+
+.carousel_stylle_button:hover,
+.carousel_stylle_button:focus {
+    color: black !important;
+    background-color: grey !important;
+}
+
+.view-products-btn {
+    background-color: #dc3545;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.2s ease;
+}
+
+.view-products-btn:hover {
+    background-color: #c82333;
+}
+
+.vpb{
+    display: flex;
+    justify-content: center;
+}
